# streamlit-browser-storage

./: .gitignore  README.md  pyproject.toml  pypyr-config.yaml
.github/workflows/: lint_and_tests.yml
ops/: bump_version.yaml  check_format.yaml  format.yaml  github_on_push.yaml  install.yaml  install_for_development.yaml  lint.yaml  publish_to_pypi.yaml  test.yaml  test_fail_on_warning.yaml
ops/hooks/: pre-commit
streamlit_browser_storage/: __init__.py  base_storage.py  component.py  cookie_storage.py  enums.py  local_storage.py  session_storage.py
streamlit_browser_storage/frontend/: package-lock.json  package.json
streamlit_browser_storage/frontend/src/: BrowserStorage.tsx  LocalStorage.ts  SessionStorage.ts
streamlit_cookies/: __init__.py
tests/: test_base_storage.py
tests/playgrounds/: cookie_storage_playground.py  local_storage_playground.py
