[tool.poetry]
name = "streamlit-cookies"
version = "0.1.0"
description = ""
authors = ["Maciej <964938+maciejATcosphere@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
