[tool.poetry]
name = "streamlit-browser-storage"
version = "0.3.5"
description = ""
authors = ["Maciej <964938+maciejATcosphere@users.noreply.github.com>"]
license = "MIT License"
repository = "https://github.com/kosfera/streamlit-browser-storage"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
streamlit = "^1.10.0"

[tool.poetry.dev-dependencies]
pypyr = "^5.4.0"
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
coverage = "^6.3.2"
ipdb = "^0.13.9"
freezegun = "^1.2.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
